[tool.poetry]
name = "freee"
version = "0.1.0"
description = ""
authors = ["tarurata <saycheese5963@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
python-dotenv = "^0.21.0"
requests = "^2.28.2"
pytest-mock = "^3.10.0"
isort = "^5.12.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
